--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Learn web development on ZENVA.com</title>
   <meta charset="UTF-8">
   <meta name="description" content="This is what Google will show!">
-  <link rel="icon" href="favicon.ico">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/favicon.ico">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
